PUSH EVERYTHING FOR NOW

--- a/scratch/customer form.html
+++ b/scratch/customer form.html
@@ -4,18 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CUSTOMER LOGIN</title>
-<link rel="stylesheet" type="text/css" href="css/formstyle.css">
+<link rel="stylesheet" type="text/css" href="../scripts/local/formstyle.css">
 </head>
 <body>
 
   <nav class="navbar">
-    <img class="logo" src="output-onlinepngtools.png">
+    <img class="logo" src="../assets/img/output-onlinepngtools.png">
       <a href="#">Customers</a>
       <a href="#">Inventory</a>
       <a href="#">Rates</a>
       <a href="#">Employees</a><br>
-    <img class="searchLogo" src="search.png">
-    <img class="searchLogo" src="bell.png">
+    <img class="searchLogo" src="../assets/img/search.png">
+    <img class="searchLogo" src="../assets/img/bell.png">
   </nav>
 
   <section class="login-page">
