--- a/scratch/customer list.html
+++ b/scratch/customer list.html
@@ -4,19 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CUSTOMER LIST</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="../scripts/local/style.css">
 </head>
 <body>
 
 			  
 	<nav class="navbar">
-		<a href="LANDING PAGE.html"><img class= "logo" src="output-onlinepngtools.png"></a>
+		<a href="LANDING PAGE.html"><img class= "logo" src="../assets/img/output-onlinepngtools.png"></a>
 			<a href="#">Customers</a>
 			<a href="#">Inventory</a>
 			<a href="#">Rates</a>
 			<a href="#">Employees</a><br>
-		<img class="searchLogo" src="search.png">
-		<img class="searchLogo" src="bell.png">
+		<img class="searchLogo" src="../assets/img/search.png">
+		<img class="searchLogo" src="../assets/img/bell.png">
 	</nav>
 	
 			  			
